# pyopencdms-old

./: .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  cli.py  docker-compose-test.yml  pygeoapi-config.yml  pygeoapi-openapi.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.db  test_util.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: integration-tests.yml  unit-tests.yml
MCH-api/: Api-MCH.py  Api-MCH.yml  README.md  requirements.txt
MCH-api/input files/: catchments.json  dailydata_dd.json  dailydata_de.json  detaildata.json  hydroregions.json  municipalities.json  states.json  station1.json  station2.json  stngroup.json  subcatchments.json  units.json
docker/: Dockerfile.mysql  Dockerfile.postgres  disable_strict_mode.cnf  mysql.conf
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
opencdms/: README.MD  __init__.py  cli.py  config.py
opencdms/dtos/: host_schema.py  observation_schema.py  station_schema.py
opencdms/fileformats/: __init__.py  text.py
opencdms/models/: __init__.py  cdm.py  clide.py  climsoft.py  surface.py  tables.py
opencdms/process/: __init__.py  r_instat.py
opencdms/provider/: __init__.py  base.py  clide.py  climsoft.py  mch.py  midas.py  midas_pg.py  midasmore.py  opencdms.py
opencdms/pygeoapi/: README.MD  climsoft_provider.py  non_spatial_provider.py  play.py  surface_provider.py
opencdms/types/: __init__.py
opencdms/utils/: __init__.py  db.py  misc.py
pygeoapi/: __init__.py
requirements/: base.txt  dev.txt
requirements/db/: mysql.txt  postgres.txt
schemas/: README.md
schemas/adam/: README.md
schemas/bdclim/: README.md
schemas/clide/: README.md  clidedb_schema.sql  obs_daily.md
schemas/mch/: Create_MCH_English_basic_tables.sql  MCHtablasycampos.def  (+1 more)
tests/: __init__.py  test_djangodemo.py  test_opencdms.py  test_schema.py
(+91 files in other folders)
