[tool.poetry]
name = "pyopencdms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = ">=1.6.5"
pandas = ">=1.3.1"
psycopg2 = ">=2.9.1"
sqlacodegen = ">=2.3.0"
SQLAlchemy = ">=1.4.22"
mysqlclient = ">=2.0.3"

[tool.poetry.dev-dependencies]
bump2version = ">=0.5.11"
wheel = ">=0.33.6"
watchdog = ">=0.9.0"
flake8 = ">=3.7.8"
tox = ">=3.14.0"
coverage = ">=4.5.4"
Sphinx = ">=1.8.5"
click = ">=7.0"
pytest = ">=6.2.4"
pytest-runner = ">=5.1"
pytest-order = ">=1.0.0"
Django = "^3.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
